--- a/css/CW/4lesson/div.css
+++ b/css/CW/4lesson/div.css
@@ -1,17 +1,66 @@
-.float_left{
-    background-color: #4b440c;
-    color: #d5af2d;
-    width: 100px;
-    float: left;
+.header {
+    width: 100%;
+    height: 300px;
+    background: fixed #eaffbb url("../../../img/headerdon.jpg") center no-repeat;
 }
-.float_right{
-    background-color: #1b4b13;
-    background-color: #0f154b;
-    background-color: rgba(255,0,0, 0.9);
-    color: #d5af2d;
-    width: 100px;
+.header span{
+    text-transform: uppercase;
+}
+.one{
+    font-size: 75px;
+    color: #47ff1b;
+    height: auto;
+    padding-top: 60px ;
+    text-align: center;
+    text-shadow: 0 0 3px #ff0000;
+}
+.first {
+    background-color: #ffddfc;
+}
+nav{
+    background: #eaffbb url("../../../img/navbg.jpg");
+    background-size: cover;
+    width: 200px;
+    float: left;
+    margin-left:40px;
+}
+.navigation ul{
+    list-style-image: url("../../../img/menu.png");
+}
+.face{
+    background: url("../../../img/col.png") center no-repeat;
+    background-size: cover;
+    width:250px;
+    height: 400px;
     float: right;
+}
+.recipe{
+    background: url("../../../img/bigbg.jpg") center;
+    background-size: cover;
+    float: left;
+    width: 550px;
+    padding: 10px;
+    margin-left: 20px;
+}
+ul,
+.made{
+    background-color: rgba(255, 255, 255, 0.3);
 }
 .both{
     clear: both;
+}
+footer{
+    background-color: #2a2875;
+}
+.copyright{
+    float: left;
+    color: #eaffbb;
+}
+.info{
+    float: right;
+    color: #eaffbb;
+}
+a{
+    text-decoration: none;
+    color: #eaffbb;;
 }
