--- a/finalprojeсt/сss/main.css
+++ b/finalprojeсt/сss/main.css
@@ -12,7 +12,7 @@ header{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 26px 0px;
+    padding: 26px 0;
 }
 .topheader{
     width: 100%;
