--- a/finalprojeсt/сss/main.css
+++ b/finalprojeсt/сss/main.css
@@ -164,11 +164,11 @@ h1{
 }
 .sectionfirst h4{
     font-family: 'Kaushan Script', cursive;
-    font-size: 24pt;
+    font-size: 24px;
 }
 .sectionfirst p{
     font-family: 'Montserrat', sans-serif;
-    font-size: 38pt;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
 }
@@ -179,7 +179,7 @@ h1{
 }
 .backgroundaqua:hover{
     margin-top: -10px;
-    background: none #95e1d3;
+    box-shadow: 10px 10px 0 #95e1d3;
 }
 .sectionsecond{
     background-color: #95e1d3;
@@ -193,13 +193,100 @@ h1{
 }
 .sectionsecond h1{
     font-family: 'Montserrat', sans-serif;
-    font-size: 72pt;
+    font-size: 72px;
     font-weight: bold;
 }
 .sectionsecond p{
     font-family: 'Montserrat', sans-serif;
-    font-size: 14pt;
+    font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
 }
-
+.firsthr{
+    width: 8%;
+    margin: 0 auto;
+    border: 3px solid #fff;
+}
+.secondhr{
+    width: 18%;
+    border: 3px solid #f38181;
+    margin: 40px auto 0 auto;
+}
+.sectionfirstimage1:hover{
+    background-image: url("../img/section1imafe1hover.png");
+    height: 250px;
+    width: 380px;
+}
+.sectionthird{
+    height: 650px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.box1 h4{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
+.box1 h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+.sectiontherdfooterbox1{
+    display: flex;
+    flex-wrap:wrap ;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-around;
+}
+.sectiontherdfooterbox1 figure{
+    display: flex;
+    width: 350px;
+}
+.sectiontherdfooterbox1 h5{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    padding-bottom:10px;
+    text-transform: uppercase;
+}
+.sectiontherdfooterbox1 p{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+}
+.sectiontherdfooterbox1 figcaption{
+     padding-left: 20px;
+ }
+.smaller{
+    width: 100%;
+    border: 1px solid #e5e5e5;
+}
+.sectionfourht{
+    display: flex;
+    height: 850px;
+    width: 100%;
+    background: url("../img/sectionfourthbg.png") center;
+}
+.sectionforhtbox1 h3{
+    padding-top: 110px;
+    text-align: center;
+    font: 24px 'Kaushan Script', cursive;
+}
+.sectionforhtbox1 h2{
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+.sectionforhtbox2{
+    width: 477px;
+    height: 582px;
+    display: flex;
+}
