--- a/finalprojeсt/сss/main.css
+++ b/finalprojeсt/сss/main.css
@@ -268,24 +268,51 @@ h1{
     border: 1px solid #e5e5e5;
 }
 .sectionfourht{
-    display: flex;
     height: 850px;
     width: 100%;
     background: url("../img/sectionfourthbg.png") center;
 }
-.sectionforhtbox1 h3{
-    padding-top: 110px;
-    text-align: center;
-    font: 24px 'Kaushan Script', cursive;
+.sectionforhtbox1{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+    height: 740px;
+    align-items: center;
 }
-.sectionforhtbox1 h2{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    text-transform: uppercase;
-}
-.sectionforhtbox2{
+.test{
     width: 477px;
     height: 582px;
-    display: flex;
+}
+.sectionforhtbox2img1{
+    background: url("../img/table.png");
+    height: 582px;
+    width: 477px;
+}
+.sectionforhtbox2img2{
+    background: url("../img/telephone.png") no-repeat;
+    height: 476px;
+    width: 274px;
+    position: absolute;
+    z-index: 2;
+    margin-left: 389px;
+    margin-top: 195px;
+}
+.sectionforhtbox2 {
+    position: relative;
+}
+.sectionforhtbox1 h3{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    font-weight: 400;
+}
+.sectionforhtbox1 h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.sectionforhtbox1:first-child {
+    padding-top: 110px;
+
 }
