--- a/finalprojeсt/сss/main.css
+++ b/finalprojeсt/сss/main.css
@@ -2,10 +2,6 @@
     padding: 0;
     margin: 0;
 }
-main{
-    padding: 0;
-    margin: 0;
-}
 header{
     background: url("../img/headerbackground.jpg") center;
     background-size: cover;
@@ -23,10 +19,13 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    margin-top: 10px;
 }
 .headerfooter{
     width:100%;
+}
+nav{
+    margin-right: 10px;
 }
 nav ul{
     text-decoration: none;
@@ -328,17 +327,15 @@ h1{
 }
 .sectionfifth {
     width: 100%;
-    height: 250px;
+    height: 350px;
     background-color: #f8f8f8;
-    position: relative;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
     align-items: center;
 }
 .sectionfifth div{
     width: 12%;
-    height: 50%;
+    height: 43%;
 }
 .section5box1{
     background: url("../img/hipsterone.png") no-repeat;
