--- a/finalprojeсt/сss/main.css
+++ b/finalprojeсt/сss/main.css
@@ -80,6 +80,8 @@ li{
     border: 3px solid #fff;
     width: 150px;
     margin: 45px auto;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 .headerfooter ul li a{
     color: rgba(255, 255, 255, 0.4);
@@ -175,6 +177,7 @@ h1{
     font-size: 30px;
     font-weight: bold;
     text-align: center;
+    text-transform: uppercase;
 }
 .sectionfirst hr{
     width: 50px;
