--- a/css/HW/6lesson/site.css
+++ b/css/HW/6lesson/site.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
 }
+/*header*/
 .header{
     height: 100vh;
     width: 100vw;
-    background: url("../../../homework/6lesson/img/head_bg.jpg") no-repeat;
+    background: url("../../../homework/6lesson/img/head_bg.jpg") no-repeat center;
     background-size: cover;
 }
 .logo{
@@ -16,7 +17,9 @@
 nav>ul{
     list-style: none;
     display: flex;
-
+}
+nav>ul{
+    flex-wrap: wrap;
 }
 nav>ul>li>a{
     text-transform: uppercase;
@@ -39,8 +42,8 @@ header h3{
     font-weight: 400;
     color: #fff;
     text-transform: uppercase;
+    text-align: center;
 }
-
 .caption{
     display: flex;
     justify-content: center;
@@ -53,7 +56,8 @@ header h1{
     font-size: 4em;
     text-transform: uppercase;
     color: #fff;
-    padding-bottom: 4vh
+    padding-bottom: 4vh;
+    text-align: center;
 }
 .btn {
     background-color: #fed136;
@@ -61,8 +65,36 @@ header h1{
     border-radius: 5px;
     padding: 2vh 3vw;
     color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
 }
-
 .btn:hover {
     background: #f09136;
+}
+/*sectionone*/
+.sectionOne{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    height: 100vh;
+    width: 100vw;
+    flex-direction: column;
+}
+.sectiononebox2{
+    display: flex;
+    justify-content: space-evenly;
+}
+.sectiononebox1 h2{
+    font-family: Arial, serif;
+    font-size: 2.5em;
+    color: #222222;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.sectiononebox1>p{
+    padding-top: 7vh;
+    font-family: Arial, serif;
+    font-size: 1em;
+    font-weight: 400;
 }
