--- a/css/HW/6lesson/site.css
+++ b/css/HW/6lesson/site.css
@@ -77,7 +77,7 @@ header h1{
     align-items: center;
     text-align: center;
     justify-content: space-around;
-    height: 100vh;
+    height: 568px;
     width: 100vw;
     flex-direction: column;
 }
@@ -96,5 +96,89 @@ header h1{
     padding-top: 7vh;
     font-family: Arial, serif;
     font-size: 1em;
+    font-weight:  400;
+}
+.sectiononebox2>div{
+    width: 30vw;
+}
+.sectionsecond{
+    background-color: #f7f7f7;
+    height: 695px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.sectionsecond h2{
+    font-family: Arial, serif;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+}
+.sectionsecondbox1 p{
+    font-family: Arial, serif;
     font-weight: 400;
+    font-size: 1em;
+    text-align: center;
+    color: #777;
+}
+.sectionthirdbox1{
+    background-color: #ffffff;
+    height: auto;
+    padding: 10vh 0;
+}
+.sectionthirdbox1 h2{
+    font-size: 2.5em;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: Arial, serif;
+    text-align: center;
+}
+.sectionthirdbox1 p{
+    font-family: Arial, serif;
+    font-weight: 400;
+    font-size: 1em;
+    color: #777;
+    text-align: center;
+}
+.sectionthirdbox2{
+    display: flex;
+    flex-direction: column;
+}
+.content1 {
+    display: flex;
+    margin-right: 44%;
+    align-items: center;
+    flex-direction: row-reverse;
+    margin-left: 5%;
+    margin-top: 2vh;
+}
+.content2 {
+    display: flex;
+    margin-left: 44%;
+    align-items: center;
+    margin-right: 5%;
+    margin-top: 2vh;
+}
+.sectionthirdbox2 p{
+    margin: 0 2vw;
+    text-align: justify;
+    color: #777;
+    font-family: Arial, serif;
+    font-size: 0.9em;
+}
+.sectionthirdbox2:last-child {
+    padding-bottom: 10vh;
+}
+footer{
+    font-family: Arial, serif;
+    font-weight: 400;
+    font-size: 0.9em;
+    color: #777;
+    background-color: #f7f7f7;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
