--- a/css/HW/6lesson/site.css
+++ b/css/HW/6lesson/site.css
@@ -5,7 +5,6 @@
 /*header*/
 .header{
     height: 100vh;
-    width: 100vw;
     background: url("../../../homework/6lesson/img/head_bg.jpg") no-repeat center;
     background-size: cover;
 }
@@ -78,12 +77,25 @@ header h1{
     text-align: center;
     justify-content: space-around;
     height: 568px;
-    width: 100vw;
+    /*width: 100%;*/
     flex-direction: column;
 }
 .sectiononebox2{
     display: flex;
     justify-content: space-evenly;
+}
+.sectiononebox2 p{
+    font-family: Arial, serif;
+    font-size: 0.9em;
+    color:#777;
+    padding-top: 2vh;
+    font-weight: 400;
+}
+.sectiononebox2 h4{
+    font-family: Arial, serif;
+    font-size: 1.1em;
+    color: #222;
+    font-weight: bold;
 }
 .sectiononebox1 h2{
     font-family: Arial, serif;
@@ -101,6 +113,7 @@ header h1{
 .sectiononebox2>div{
     width: 30vw;
 }
+/*secionthird*/
 .sectionsecond{
     background-color: #f7f7f7;
     height: 695px;
@@ -142,35 +155,45 @@ header h1{
     color: #777;
     text-align: center;
 }
-.sectionthirdbox2{
+.sectionthirdbox2 {
     display: flex;
     flex-direction: column;
-}
-.content1 {
-    display: flex;
-    margin-right: 44%;
     align-items: center;
-    flex-direction: row-reverse;
-    margin-left: 5%;
+    justify-content: space-around;
+}
+.content1{
+    display: flex;
+    align-items: center;
     margin-top: 2vh;
 }
 .content2 {
     display: flex;
-    margin-left: 44%;
     align-items: center;
-    margin-right: 5%;
     margin-top: 2vh;
 }
-.sectionthirdbox2 p{
+.sectionthirdbox2 p {
+    position: absolute;
     margin: 0 2vw;
     text-align: justify;
     color: #777;
     font-family: Arial, serif;
     font-size: 0.9em;
+    width: 30vw;
 }
+.sectionthirdbox2 p:nth-child(1){
+    margin-left: -35%;
+}
+.sectionthirdbox2 p:nth-child(2n){
+    margin-left: 20vw;
+}
+
 .sectionthirdbox2:last-child {
     padding-bottom: 10vh;
 }
+.sectionthirdbox2 img{
+    height: 20vh;
+}
+/*footer*/
 footer{
     font-family: Arial, serif;
     font-weight: 400;
