--- a/css/HW/6lesson/position.css
+++ b/css/HW/6lesson/position.css
@@ -6,12 +6,25 @@ body{
     background-color: red;
 }
 .position{
-    width: 30vw;
-    height: 35vh;
+    width: 300px;
+    height: 300px;
     background: #000;
     position: absolute;
-    opacity: 0.2;
+    opacity: 0.8;
     color: #fff;
-    left: 25px;
-    top: 35px;
+    left: 1px;
+    top: 20px;
+    display: block;
+}
+.absolute {
+    width: 20px;
+    height: 20px;
+    background-color: #00ff00;
+    position: absolute;
+    left: 320px;
+    top: 15px;
+    border-radius: 50%;
+}
+.absolute:hover+div{
+    display: none;
 }
