--- a/classwork/final/css/main.css
+++ b/classwork/final/css/main.css
@@ -113,6 +113,7 @@ body{
     line-height: 1.7em;
     margin: 0 30px;
     color: silver;
+    text-align: justify;
 }
 .test span{
     color: black;
