--- a/homework/main.css
+++ b/homework/main.css
@@ -1,122 +1,54 @@
-body {
+body{
     margin: 0;
-    background: white;
-    background-image: linear-gradient(90deg, rgba(239, 66, 66, 0.5) 50%, transparent 0),
-    linear-gradient(rgba(239,66,66, 0.5) 50%, transparent 0);
-    background-size:30px 30px;
 }
-.main {
-    width: 1170px;
-    display: flex;
-    justify-content: center;
-}
-.sectionLeft{
-    background-color: #fc3d3d;
-    box-shadow: 15px 0 20px #EF4242;
-}
-.photo{
-    height: 400px;
-    width: 400px;
-}
-.info {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-}
-.sectionLeft h3{
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+    padding: 0;
     color: #e8e8e8;
-    font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
-    text-align: center;
-    font-size: 2em;
+    font-family: Roboto;
 }
-.bgico {
-    height: 100px;
-}
-.sectionLeft_sectionLeftContacts-email {
+header{
+    margin-top: 20px;
+    background: url("img/headerBackGround.svg") no-repeat center;
+    height: 300px;
     display: flex;
-}
-.description{
-    display: flex;
-    align-items: center;
     justify-content: center;
-    height: 50px;
-    padding-left: 30px;
+    align-items: center;
     flex-direction: column;
 }
-a{
-    text-decoration: none;
-    color: #e8e8e8;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2em;
+.name{
+    text-align: center;
 }
-.sectionLeft_sectionLeftContacts{
-    display: flex;
-}
-.sectionLeft_sectionLeftContacts-coord {
-    display: flex;
-}
-.sectionLeft_sectionLeftContacts-coord p{
-    color: #e8e8e8;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2em;
-}
-.sectionLeft_Skill  p{
-    text-transform: uppercase;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2em;
-    color: #e8e8e8;
-}
-.progress {
-    position: relative;
-    width: 200px;
-    height: 20px;
-    overflow: hidden;
-    background: #ff3232;
-    background: linear-gradient(to right, #a41e22 0%, #a41e22 33%, #a41e22 66%, #a41e22 100%);
-    border-radius: 5px;
-}
-
-.strips {
+.columnLeft{
+    background: linear-gradient(to top, #486e6f 0%, #828c95 36%, #68baba 100%  );
+    height: 2000px;
+    width:300px;
+    margin-left: 20px;
     position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: linear-gradient(to right, transparent 0%, transparent 50%, #fff 50%, #fff 100%);
-    background-size: 8px 100%; /* Ширина деления = 6px / 2 = 3px */
 }
-.grayback1 {
-    position: relative;
-    left: 75%; /* Текущее состояние */
-    width: 100%;
-    height: 100%;
-    background-color: #ddd;
+.photo{
+    border-radius: 50%;
+    max-width: 250px;
+    margin:  70px 25px 0;
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+    transition: all 1s;
 }
-.grayback2 {
-    position: relative;
-    left: 70%; /* Текущее состояние */
-    width: 100%;
-    height: 100%;
-    background-color: #ddd;
+.photo:hover {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
-.grayback3 {
-    position: relative;
-    left: 50%; /* Текущее состояние */
-    width: 100%;
-    height: 100%;
-    background-color: #ddd;
+aside{
+    background-color: #323b3a;
+    width: 250px;
+    text-transform: uppercase;
+    text-align: center;
+    border-radius: 5px;
 }
-.grayback4 {
-    position: relative;
-    left: 30%; /* Текущее состояние */
-    width: 100%;
-    height: 100%;
-    background-color: #ddd;
-}
-.skill {
+.info{
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 20px 0 20px;
+    margin-top: 50px;
 }
